<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lb.lawbook.data.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lb.lawbook.data.ui.gallery.MyProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_my_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lb.lawbook.data.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_sign_out"
        android:name="com.lb.lawbook.data.ui.signout.SignOutFragment"
        android:label="@string/menu_sign_out"
        tools:layout="@layout/sign_out_fragment" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.lb.lawbook.data.ui.services.ServicesFragment"
        android:label="My Services"
        tools:layout="@layout/activity_services">
        <action
            android:id="@+id/action_nav_services_to_serviceDetailFragment"
            app:destination="@id/service_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/service_detail_fragment"
        android:name="com.lb.lawbook.data.ui.services.ServiceDetailFragment"
        android:label="Add Service Details"
        tools:layout="@layout/activity_service_detail" />


</navigation>